Closed Bug 1115717 Opened 10 years ago Closed 10 years ago

Warning dialog when exiting Private Browsing with active downloads could be made less technical

Categories

(Firefox :: Private Browsing, defect)

defect
Not set
normal
Points:
1

Tracking

()

RESOLVED FIXED
Firefox 38
Iteration:
38.1 - 26 Jan

People

(Reporter: jaws, Assigned: jaws)

References

Details

Attachments

(2 files)

Attached image Screenshot of bug
The current dialog (screenshot attached), uses "mode" a couple times. In both cases, the word can be left out and the text will be read clearer. Currently: "If you close all Private Browsing windows now, 1 download will be canceled. Are you sure you want to leave the Private Browsing mode? [Cancel 1 Download] [Stay in Private Browsing mode]" Proposed change: "If you close all Private Browsing windows now, 1 download will be canceled. Are you sure you want to leave Private Browsing? [Cancel 1 Download] [Stay in Private Browsing]"
OS: Windows 7 → All
Hardware: x86_64 → All
Attached patch PatchSplinter Review
Assignee: nobody → jaws
Status: NEW → ASSIGNED
Attachment #8541713 - Flags: review?(paolo.mozmail)
Iteration: --- → 37.3
Points: --- → 1
Flags: firefox-backlog+
Comment on attachment 8541713 [details] [diff] [review] Patch Review of attachment 8541713 [details] [diff] [review]: ----------------------------------------------------------------- ::: toolkit/locales/en-US/chrome/mozapps/downloads/downloads.properties @@ -38,5 @@ > cancelDownloadsOKTextMultiple=Cancel %S Downloads > dontQuitButtonWin=Don't Exit > dontQuitButtonMac=Don't Quit > dontGoOfflineButton=Stay Online > -dontEnterPrivateBrowsingButton=Don't Enter the Private Browsing Mode 'dontEnterPrivateBrowsingButton' is unused anywhere in m-c or comm-central.
Comment on attachment 8541713 [details] [diff] [review] Patch Review of attachment 8541713 [details] [diff] [review]: ----------------------------------------------------------------- This looks good as an incremental improvement, but... We should look into using PluralForm.jsm (like we do with kDownloadsStringsRequiringPluralForm). Might be worth doing at least for this message. More in general I think we're quite pedantic in all those messages :-) We express the "cancel downloads" concept three times (including the window title), we say whatever action the user just did three other times, and we say the exact number of downloads being canceled two times. Also, "Cancel All Downloads" is not quite correct when closing the last private window, only private downloads are canceled. What I envision is something like: Window title (no PluralForm, same everywhere): Cancel Downloads Message Line 1 (no PluralForm, based on action to clarify why we're asking): You're closing the last Private Browsing window. / You're about to exit. / ... Message Line 2 (PluralForm, different only for Private Browsing): 1 download will be canceled if you continue. 1 private download will be canceled if you continue. OK Button (PluralForm): Cancel Download Cancel Downloads Cancel Button: Don't Exit / Stay Online / Stay in Private Browsing / ... The reason for separating line 1 and 2 is that some locales may have three or four plural forms, this reduces the number of combinations to translate. Line 1 is to make super clear why we're asking, but we maybe we can make the button serve the purpose. In fact, this dialog is always user-triggered and synchronous, so maybe we can get rid of that line completely, saving our localizers some work. Opinions? If it sounds good, we may get a UX/Localizer review and do this instead.
Attachment #8541713 - Flags: review?(paolo.mozmail) → review+
Flags: qe-verify?
Flags: qe-verify? → qe-verify-
Iteration: 37.3 - 12 Jan → ---
https://hg.mozilla.org/integration/fx-team/rev/232532a9ea55 (In reply to :Paolo Amadini from comment #3) > This looks good as an incremental improvement, but... > > We should look into using PluralForm.jsm > ... Yeah I think these are good recommendations and something that we could improve upon, but this isn't something that has been prioritized so I don't want to spend a bunch of time reworking it right now. Also, some of the strings come in through nsDownloadManager.cpp and I'm not sure how that can get access to PluralForm.
Iteration: --- → 38.1 - 26 Jan
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 38
Depends on: 1122559
Blocks: 1122592
The bug is not fixed yet in 47.0.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: