Bug 1115717 - Warning dialog when exiting Private Browsing with active downloads could be made less technical. r=paolo